# ToDoAgent

./: README.md  pyproject.toml
to_do_agent/: __init__.py  app.py  bubbletea_endpoints.py
to_do_agent/api/: root_router.py
to_do_agent/api/models/: chat_models.py
to_do_agent/api/v1/: chat_router.py  todo_router.py
to_do_agent/backend/: todo_storage.py  todo_storage_interface.py
to_do_agent/config/: agent_settings.py  app_settings.py  dependencies.py
to_do_agent/domain/: agent.py  chat_history.py  tools.py
to_do_agent/domain/models/: __init__.py  todo_models.py
to_do_agent/integrations/bubbletea/: bubbletea_endpoints.py  bubbletea_router.py
to_do_agent/tests/: __init__.py  conftest.py  test_agent.py  test_models.py  test_storage.py
